src/test/deca/context/invalid/with-object/decl_inexisting_class2.deca
class A{
    int x;
}

{
    A a = new B();
}